--- a/pom.xml
+++ b/pom.xml
@@ -9,7 +9,7 @@
         <relativePath /><!-- lookup parent from repository -->
     </parent>
     <groupId>tech.justjava</groupId>
-    <artifactId>processManager</artifactId>
+    <artifactId>TheAttorneyAI</artifactId>
     <version>0.0.1-SNAPSHOT</version>
     <name>processManager</name>
 
