--- a/pom.xml
+++ b/pom.xml
@@ -11,7 +11,7 @@
     <groupId>tech.justjava</groupId>
     <artifactId>TheAttorneyAI</artifactId>
     <version>0.0.1-SNAPSHOT</version>
-    <name>processManager</name>
+    <name>theAttorneyAI</name>
 
     <properties>
         <java.version>21</java.version>
