--- a/pom.xml
+++ b/pom.xml
@@ -9,9 +9,9 @@
         <relativePath /><!-- lookup parent from repository -->
     </parent>
     <groupId>tech.justjava</groupId>
-    <artifactId>TheAttorneyAI</artifactId>
+    <artifactId>theSoftwareEngineers</artifactId>
     <version>0.0.1-SNAPSHOT</version>
-    <name>theAttorneyAI</name>
+    <name>theSoftwareEngineers</name>
 
     <properties>
         <java.version>21</java.version>
