--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,8 +1,8 @@
 spring:
   datasource:
-    url: ${JDBC_DATABASE_URL:jdbc:postgresql://localhost:5433/theAttorneyAI}
+    url: ${JDBC_DATABASE_URL:jdbc:postgresql://localhost:5432/softwareEngineer}
     username: ${JDBC_DATABASE_USERNAME:postgres}
-    password: ${JDBC_DATABASE_PASSWORD:020775Rashy!}
+    password: ${JDBC_DATABASE_PASSWORD:1234}
     hikari:
       connection-timeout: 30000
       maximum-pool-size: 10
@@ -36,13 +36,13 @@ spring:
       client:
         provider:
           keycloak:
-            issuer-uri: ${ISSUER_URI:https://ngcloak.onrender.com/realms/attorneyAI}
+            issuer-uri: ${ISSUER_URI:https://ngcloak.onrender.com/realms/softwareEngineer}
 
         registration:
           keycloak:
             provider: keycloak
-            client_id: ${KEYCLOAK_CLIENT_ID:attorneyAI}
-            client_secret: ${KEYCLOAK_CLIENT_SECRET:IGKp4ZN3L0VSAqrlFQB5qW1WYn59qZS8}
+            client_id: ${KEYCLOAK_CLIENT_ID:softwareEngineer}
+            client_secret: ${KEYCLOAK_CLIENT_SECRET:rJuSSQDWuFvATo2pNlAlj0pTVJAbBNPo}
             authorization-grant-type: authorization_code
             scope: openid,profile,email
 error:
@@ -59,19 +59,21 @@ error:
 server:
   tomcat:
     max-part-count: '100'
-  port: 9001
+  port: 9010
 springdoc:
   pathsToMatch: /api/**
 keycloak:
   base-url: ${KEYCLOAK_BASE_URI:https://ngcloak.onrender.com}
-  client-id: ${KEYCLOAK_CLIENT_ID:attorneyAI}
-  client-secret: ${KEYCLOAK_CLIENT_SECRET:IGKp4ZN3L0VSAqrlFQB5qW1WYn59qZS8}
+  client-id: ${KEYCLOAK_CLIENT_ID:softwareEngineer}
+  client-secret: ${KEYCLOAK_CLIENT_SECRET:rJuSSQDWuFvATo2pNlAlj0pTVJAbBNPo}
 app:
-  processKey: "caseManager"
+  processKey: "softwareEngineeringProcess"
 message:
   paymentGateway-routing-key: ${PAYMENT_GATEWAY_ROUTING_KEY:}
 logging:
   level:
+    feign: DEBUG
+    org.springframework.cloud.openfeign: DEBUG
     org:
       flowable:
         engine:
