--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -2,7 +2,7 @@ spring:
   datasource:
     url: ${JDBC_DATABASE_URL:jdbc:postgresql://localhost:5432/theSoftwareEngineers}
     username: ${JDBC_DATABASE_USERNAME:postgres}
-    password: ${JDBC_DATABASE_PASSWORD:Cyber 123$}
+    password: ${JDBC_DATABASE_PASSWORD:1383}
     hikari:
       connection-timeout: 30000
       maximum-pool-size: 10
